fixed layout issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ body {
 .box {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  max-height: 100%;
   h1 {
     font-size: 20px;
     margin: 0 0 1rem 0;
